fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-size: 2em;
+    overflow-x: hidden;
 }
 
 img {
@@ -31,15 +32,15 @@ p, h3, h4, h6, ul{
 
 .section1 {
     display: flex;
-    width: 100vw;
+    width: 100%;
 }
 .section2 {
     display: flex;
-    width: 100vw;
+    width: 100%;
 }
 .section3 {
     display: flex;
-    width: 100vw;
+    width: 100%;
 }
 
 .tile {
